--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
         "Fabrice Bonny <fabrice.bonny@temesis.com>",
         "Mickael Hoareau <mickael.hoareau@temesis.com>",
         "Olivier Meunier <olivier.meunier@temesis.com>",
-        "Samuel Martin <samuel.martin@temesis.com>"
+        "Samuel Martin <samuel.martin@temesis.com>",
+	"Laurent Jouanneau <laurent@innophi.com>"
     ],
-    "version": "1.6.9",
+    "version": "1.7.0",
     "license": "MPL 2.0"
 }
